--- a/src/components/Layout.module.css
+++ b/src/components/Layout.module.css
@@ -1,4 +1,5 @@
 .header {
+  font-family: "Noto Sans KR", sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -11,8 +12,9 @@
   width: 90%;
   height: 60px;
   padding: 0 15px;
-  background-color: white;
+  background-color: #fafafa;
   border-radius: 15px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
 }
 .header div p {
   font-weight: 600;
@@ -21,8 +23,8 @@
 .header div button {
   height: 40px;
   border: none;
-  border: 3px solid #5738c0;
-  background-color: #5738c0;
+  border: 3px solid #7384f3;
+  background-color: #7384f3;
   color: white;
   font-size: 1.2rem;
   font-weight: 700;
@@ -31,10 +33,11 @@
 }
 .header div button:hover {
   background-color: white;
-  color: #5738c0;
+  color: #7384f3;
 }
 
 .main {
+  font-family: "Noto Sans KR", sans-serif;
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
@@ -49,6 +52,7 @@
   padding: 30px;
   background-color: rgba(255, 255, 255, 0.8);
   border-radius: 15px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
 }
 .main aside a {
   display: flex;
@@ -57,12 +61,9 @@
   text-decoration: none;
   font-size: 1.2rem;
   font-weight: 600;
-  color: #5738c0;
+  color: black;
   border-radius: 15px;
   transition: background-color 0.25s, color 0.25s;
-}
-.main aside a:hover {
-  background-color: #5738c0;
 }
 .main aside a svg {
   margin-right: 1rem;
@@ -70,6 +71,36 @@
 }
 .main section {
   width: 78%;
-  background-color: white;
   border-radius: 15px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+}
+
+.searchBar {
+  font-family: "Noto Sans KR", sans-serif;
+  position: relative;
+  width: 100%;
+  padding: 1rem 0;
+}
+.searchBar input {
+  position: relative;
+  width: 100%;
+  padding: 0.8rem;
+  font-size: 0.9rem;
+  border: 5px solid #7384f3;
+}
+.searchBar input:focus {
+  outline: none;
+}
+.searchBar ul {
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  background-color: #f5f5f5;
+}
+.searchBar ul li {
+  padding: 0.8rem 0.5rem;
+}
+.searchBar ul li:hover {
+  background-color: #ddd;
+  cursor: pointer;
 }
