--- a/src/components/Layout.module.scss
+++ b/src/components/Layout.module.scss
@@ -1,4 +1,5 @@
 .header {
+  font-family: "Noto Sans KR", sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -10,8 +11,9 @@
     width: 90%;
     height: 60px;
     padding: 0 15px;
-    background-color: white;
+    background-color: #fafafa;
     border-radius: 15px;
+    box-shadow: 0 0 10px rgba(black, 0.05);
     p {
       font-weight: 600;
       margin-right: 15px;
@@ -19,8 +21,8 @@
     button {
       height: 40px;
       border: none;
-      border: 3px solid #5738c0;
-      background-color: #5738c0;
+      border: 3px solid #7384f3;
+      background-color: #7384f3;
       color: white;
       font-size: 1.2rem;
       font-weight: 700;
@@ -28,12 +30,14 @@
       transition: background-color 0.25s, color 0.25s;
       &:hover {
         background-color: white;
-        color: #5738c0;
+        color: #7384f3;
       } //button hover
     } //button
   } //div
 } //header
+//---------------------------------------------------
 .main {
+  font-family: "Noto Sans KR", sans-serif;
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
@@ -47,6 +51,7 @@
     padding: 30px;
     background-color: rgba(white, 0.8);
     border-radius: 15px;
+    box-shadow: 0 0 10px rgba(black, 0.05);
     a {
       display: flex;
       align-items: center;
@@ -54,21 +59,48 @@
       text-decoration: none;
       font-size: 1.2rem;
       font-weight: 600;
-      color: #5738c0;
+      color: black;
       border-radius: 15px;
       transition: background-color 0.25s, color 0.25s;
-      &:hover {
-        background-color: #5738c0;
-      }
       svg {
         margin-right: 1rem;
         font-size: 1.5rem;
-      }
-    }
-  }
+      } // icon
+    } // navlink
+  } //aside
   section {
     width: 78%;
-    background-color: white;
     border-radius: 15px;
-  }
-}
+    box-shadow: 0 0 10px rgba(black, 0.05);
+  } //section
+} //.main
+//-----------------------------------------------
+.searchBar {
+  font-family: "Noto Sans KR", sans-serif;
+  position: relative;
+  width: 100%;
+  padding: 1rem 0;
+  input {
+    position: relative;
+    width: 100%;
+    padding: 0.8rem;
+    font-size: 0.9rem;
+    border: 5px solid #7384f3;
+    &:focus {
+      outline: none;
+    }
+  } //input
+  ul {
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    background-color: #f5f5f5;
+    li {
+      padding: 0.8rem 0.5rem;
+      &:hover {
+        background-color: #ddd;
+        cursor: pointer;
+      } //li hover
+    } //li
+  } //ul
+} //searchBar
