--- a/src/page/auth/Login/Login.module.css
+++ b/src/page/auth/Login/Login.module.css
@@ -15,7 +15,7 @@
 }
 .section > div figure {
   width: 50%;
-  background: linear-gradient(45deg, rgb(88, 57, 191) 0%, rgb(97, 69, 193) 10%, rgb(98, 72, 190) 25%, rgb(105, 80, 190) 39%, rgb(110, 88, 182) 52%, rgb(120, 100, 187) 64%, rgb(128, 110, 189) 78%, rgb(136, 122, 181) 92%);
+  background-color: #444;
   border-radius: 20px 0 0 20px;
 }
 .section > div figure img {
@@ -23,7 +23,7 @@
   height: 100%;
   object-fit: cover;
   background-position: center center;
-  mix-blend-mode: luminosity;
+  mix-blend-mode: screen;
   border-radius: 20px 0 0 20px;
 }
 .section > div > div {
@@ -33,7 +33,7 @@
 }
 .section > div > div p {
   margin-bottom: 15px;
-  color: #544875;
+  color: #7384f3;
   font-size: 2vw;
 }
 @media screen and (max-width: 900px) {
@@ -50,10 +50,10 @@
 .section > div > div h2 {
   margin: 1rem 0;
   text-align: center;
-  color: #544875;
+  color: #7384f3;
   font-size: 1.5rem;
   font-weight: 700;
-  border: 5px solid rgba(84, 72, 117, 0.3);
+  border: 5px solid rgba(115, 132, 243, 0.3);
   padding: 5px 0;
 }
 @media screen and (min-height: 900px) {
@@ -81,15 +81,15 @@
 }
 .section > div > div form input:focus {
   outline: none;
-  border-bottom: 2.5px solid rgba(84, 72, 117, 0.3);
+  border-bottom: 2.5px solid rgba(115, 132, 243, 0.3);
 }
 .section > div > div form button {
   width: 70%;
   height: 40px;
   margin: 2rem auto;
   border: none;
-  border: 3px solid #5738c0;
-  background-color: #5738c0;
+  border: 3px solid #7384f3;
+  background-color: #7384f3;
   color: white;
   font-size: 1.2rem;
   font-weight: 700;
@@ -98,7 +98,7 @@
 }
 .section > div > div form button:hover {
   background-color: white;
-  color: #5738c0;
+  color: #7384f3;
 }
 .section > div > div form a {
   display: flex;
@@ -108,12 +108,12 @@
   width: 70%;
   height: 40px;
   text-decoration: none;
-  color: #5738c0;
+  color: #7384f3;
   font-size: 1.2rem;
   font-weight: 700;
   transition: background-color 0.25s, color 0.25s;
 }
 .section > div > div form a:hover {
-  background-color: #5738c0;
+  background-color: #7384f3;
   color: white;
 }
