--- a/src/page/auth/Login/Login.module.scss
+++ b/src/page/auth/Login/Login.module.scss
@@ -13,24 +13,14 @@
     filter: drop-shadow(-15px 15px 10px rgba(black, 0.2));
     figure {
       width: 50%;
-      background: linear-gradient(
-        45deg,
-        rgba(88, 57, 191, 1) 0%,
-        rgba(97, 69, 193, 1) 10%,
-        rgba(98, 72, 190, 1) 25%,
-        rgba(105, 80, 190, 1) 39%,
-        rgba(110, 88, 182, 1) 52%,
-        rgba(120, 100, 187, 1) 64%,
-        rgba(128, 110, 189, 1) 78%,
-        rgba(136, 122, 181, 1) 92%
-      );
+      background-color: #444;
       border-radius: 20px 0 0 20px;
       img {
         width: 100%;
         height: 100%;
         object-fit: cover;
         background-position: center center;
-        mix-blend-mode: luminosity;
+        mix-blend-mode: screen;
         border-radius: 20px 0 0 20px;
       }
     } //figure
@@ -40,7 +30,7 @@
       border-radius: 0 20px 20px 0;
       p {
         margin-bottom: 15px;
-        color: #544875;
+        color: #7384f3;
         font-size: 2vw;
         @media screen and (max-width: 900px) {
           font-size: 18px;
@@ -58,10 +48,10 @@
           margin: 5rem 0;
         }
         text-align: center;
-        color: #544875;
+        color: #7384f3;
         font-size: 1.5rem;
         font-weight: 700;
-        border: 5px solid rgba(#544875, 0.3);
+        border: 5px solid rgba(#7384f3, 0.3);
         padding: 5px 0;
         span {
           color: #333;
@@ -82,7 +72,7 @@
           font-size: 1.2rem;
           &:focus {
             outline: none;
-            border-bottom: 2.5px solid rgba(#544875, 0.3);
+            border-bottom: 2.5px solid rgba(#7384f3, 0.3);
           } //input:focus
         } //input
         button {
@@ -90,8 +80,8 @@
           height: 40px;
           margin: 2rem auto;
           border: none;
-          border: 3px solid #5738c0;
-          background-color: #5738c0;
+          border: 3px solid #7384f3;
+          background-color: #7384f3;
           color: white;
           font-size: 1.2rem;
           font-weight: 700;
@@ -99,7 +89,7 @@
           transition: background-color 0.25s, color 0.25s;
           &:hover {
             background-color: white;
-            color: #5738c0;
+            color: #7384f3;
           } //button hover
         } //button
         a {
@@ -110,12 +100,12 @@
           width: 70%;
           height: 40px;
           text-decoration: none;
-          color: #5738c0;
+          color: #7384f3;
           font-size: 1.2rem;
           font-weight: 700;
           transition: background-color 0.25s, color 0.25s;
           &:hover {
-            background-color: #5738c0;
+            background-color: #7384f3;
             color: white;
           } //a:hover
         } //a
