--- a/src/page/auth/sign/Sign.module.css
+++ b/src/page/auth/sign/Sign.module.css
@@ -1,4 +1,5 @@
 .form {
+  font-family: "Raleway", sans-serif;
   display: flex;
   flex-direction: column;
   position: absolute;
@@ -11,13 +12,13 @@
   height: 80%;
   background-color: white;
   border-radius: 20px;
-  font-family: "Raleway", sans-serif;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
 }
 .form label {
   margin-bottom: 1rem;
   font-size: 1.5rem;
   font-weight: 600;
-  color: #544875;
+  color: #7384f3;
 }
 .form input {
   margin-bottom: 1rem;
@@ -27,15 +28,15 @@
 }
 .form input:focus {
   outline: none;
-  border-bottom: 2.5px solid rgba(84, 72, 117, 0.3);
+  border-bottom: 2.5px solid rgba(115, 132, 243, 0.3);
 }
 .form button {
   width: 70%;
   height: 40px;
   margin: 2rem auto;
   border: none;
-  border: 3px solid #5738c0;
-  background-color: #5738c0;
+  border: 3px solid #7384f3;
+  background-color: #7384f3;
   color: white;
   font-size: 1.2rem;
   font-weight: 700;
@@ -44,7 +45,7 @@
 }
 .form button:hover {
   background-color: white;
-  color: #5738c0;
+  color: #7384f3;
 }
 .form button:disabled {
   background-color: #666;
@@ -67,5 +68,5 @@
   margin-left: 10px;
   font-weight: 700;
   text-decoration: none;
-  color: #5738c0;
+  color: #7384f3;
 }
