--- a/src/page/main/Main.module.scss
+++ b/src/page/main/Main.module.scss
@@ -1,33 +1,121 @@
 .mainSection {
+  font-family: "Noto Sans KR", sans-serif;
   display: flex;
   padding: 2rem;
   overflow: hidden;
+  background-color: #fafafa;
   > div:nth-child(1) {
     width: 70%;
   }
   > div:nth-child(2) {
     width: 30%;
   }
-}
+} //mainSection
+//-----------------------------------
 .mainList {
+  font-family: "Noto Sans KR", sans-serif;
+  position: relative;
   width: 78%;
+  padding: 0 2rem;
   overflow-y: scroll;
-  background-color: white;
+  background-color: #fafafa;
   border-radius: 15px;
   ul {
     width: 100%;
     display: flex;
+    margin: 1rem 0;
+    border-radius: 20px;
+    background-color: rgba(white, 1);
+    box-shadow: 0 0 10px rgba(black, 0.1);
+    &:first-of-type {
+      position: sticky;
+      border-radius: 0 0 15px 15px;
+      top: 0;
+    }
+    &:nth-of-type(2n + 1) {
+      background-color: #ddd;
+    }
     li {
       display: flex;
       justify-content: center;
       align-items: center;
       width: calc(100% / 5);
-      padding: 1rem;
+      padding: 2rem 1rem;
       font-size: 0.8rem;
-      border-radius: 20px;
+      transition: background-color 0.2s;
+      &:last-child {
+        border-radius: 0 20px 20px 0;
+      }
+    } //li
+  } //ul
+} //mainList
+//------------------------------------
+.mainCalc {
+  font-family: "Noto Sans KR", sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 100%;
+  .explainStock {
+    line-height: 200%;
+    span:nth-of-type(1) {
+      font-size: 1.2rem;
+      font-weight: 700;
     }
-    &:nth-of-type(2n + 1) {
-      background-color: rgba(#d9cff4, 0.5);
+    span:nth-of-type(2) {
+      font-size: 1.2rem;
+      font-weight: 700;
+    }
+    span:nth-of-type(3) {
+      color: red;
+      font-weight: 600;
+      font-size: 1.2rem;
+    }
+    span:nth-of-type(4) {
+      color: blue;
+      font-weight: 600;
+      font-size: 1.2rem;
     }
   }
-}
+  .sellAndBuying {
+    padding: 1rem;
+    border: 5px solid #7384f3;
+    span {
+      display: block;
+      margin-bottom: 1rem;
+    }
+    input {
+      width: 100%;
+      margin-bottom: 0.5rem;
+      border: none;
+      border-bottom: 2px solid #7384f3;
+      &:focus {
+        outline: none;
+      }
+    }
+    div {
+      display: flex;
+      justify-content: space-between;
+      select {
+        border: none;
+        border-bottom: 2px solid #7384f3;
+        &:focus {
+          outline: none;
+        }
+      } //select
+      button {
+        border: 2px solid #7384f3;
+        background-color: #7384f3;
+        color: white;
+        font-size: 0.85rem;
+        font-weight: 700;
+        cursor: pointer;
+        transition: background-color 0.25s, color 0.25s;
+        &:hover {
+          background-color: white;
+          color: #7384f3;
+        } //button hover
+      }
+    } //3deps div
+  } //sellAndBuying
+} //maincalc
