Fixed: 고가와 저가 사이에 값만 입력가능하므로 defaultValue로 저가 자동 설정, 뉴스페이지 커서 pointer로 변경

--- a/src/page/stockNews/StockNews.module.scss
+++ b/src/page/stockNews/StockNews.module.scss
@@ -20,6 +20,7 @@
       width: 100%;
       margin: 0.5rem;
       padding: 1rem;
+      cursor: pointer;
       font-weight: bold;
       font-size: 1.5rem;
       &::marker {
