--- a/src/components/Layout.module.css
+++ b/src/components/Layout.module.css
@@ -104,3 +104,19 @@
   background-color: #ddd;
   cursor: pointer;
 }
+
+.Error {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 1rem;
+  border: 15px solid #7384f3;
+  font-size: 4rem;
+  font-weight: bold;
+  color: #7384f3;
+  line-height: 300%;
+}
+.Error p {
+  font-size: 2rem;
+}
