--- a/src/page/main/Main.module.scss
+++ b/src/page/main/Main.module.scss
@@ -12,7 +12,7 @@
   }
 } //mainSection
 //-----------------------------------
-.mainList {
+.MyStockDetail {
   font-family: "Noto Sans KR", sans-serif;
   position: relative;
   width: 78%;
@@ -48,7 +48,7 @@
       }
     } //li
   } //ul
-} //mainList
+} //MyStockDetail
 //------------------------------------
 .mainCalc {
   font-family: "Noto Sans KR", sans-serif;
